infra/k8s/client.nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: client-nodeport-srv
spec:
  type: NodePort
  selector:
    app: client
  ports:
  - name: client 
    protocol: TCP
    port: 3000
    targetPort: 3000
