infra/k8s/client.srv.yml
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - name: client 
    protocol: TCP
    port: 3000
    targetPort: 3000
