infra/k8s/moderation.srv.yml
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
  - name: moderation 
    protocol: TCP
    port: 4003
    targetPort: 4003
