infra/k8s/query.srv.yml
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
  - name: query 
    protocol: TCP
    port: 4002
    targetPort: 4002
